# inanctekstil

./: .gitignore  CLAUDE.md
brand-assets/: package-lock.json
brand-assets/favicon/: site.webmanifest
catalog/: Products - v4.csv  Products - v5.csv
catalog/design-catalog/: DARK BLACKOUT.HEIC  ENZA.HEIC  HAVUZ BLACKOUT.HEIC  HERMES BLACKOUT.HEIC  MONICA.HEIC  SULTAN 22260.HEIC  SÜET.HEIC  YAĞMUR.heic  _100 BLACKOUT.HEIC
catalog/room-generator/: generate.py  generate_batch.py  pyproject.toml  upload_to_pms.py  upload_to_shopify.py  upload_variant_rooms.py  upload_variant_textures.py
catalog/swatch-assets/: design_centers.json  mapping.json  studio_centers.json  texture-generation-report.json  verification.html
catalog/swatch-cropper/: center_picker.py  design_extractor.py  heic_extractor.py  mask_editor.py  pyproject.toml  room_batch.py  room_visualizer.py  room_visualizer_fal.py  test_extractor.py
catalog/swatch-cropper/src/swatch_cropper/: heic_extractor.py  main.py
catalog/swatch-cropper/tests/: test_batch.py  test_color_qa.py  test_composite.py  test_fold_map.py  test_pattern_tile.py  test_pipeline.py  test_recolor.py
catalog/texture-generator/: pyproject.toml
catalog/texture-generator/src/texture_generator/: cli.py  lab_transfer.py  pipeline.py
catalog/texture-generator/tests/: test_lab_transfer.py  test_pipeline.py
docs/: README.md  curtain-input-pilot-plan.md  room-visualizer-investigation.md  room-visualizer-plan.md  swatch-digitization-guide.md
docs/benchmark/: feature-gap-analysis.md  update-plan.md
docs/brand/: README.md  gorsel-kimlik.md  marka-kimligi.md  (+1 more)
ecommerce/: Products - v2.csv
ecommerce/swatch-cropper/: pyproject.toml
ecommerce/swatch-cropper/src/swatch_cropper/: __init__.py  main.py
gitopsprod/: .gitignore  .terraform.lock.hcl  README.md  dns.tf  main.tf  outputs.tf  terraform.tfvars.example
image-generator/: .gitignore  README.md  package-lock.json  package.json
scripts/: test-configurator.js
technical/meta-ads/armavita-meta-ads-mcp/: .gitignore  .uv.toml  Dockerfile  README.md  SECURITY.md  pyproject.toml  requirements.txt  run-armavita-meta-ads-mcp.local.sh
technical/meta-ads/armavita-meta-ads-mcp/docs/: auth-setup.md  local-client-guide.md
technical/meta-ads/armavita-meta-ads-mcp/scripts/: run-local-mcp.sh
technical/meta-ads/armavita-meta-ads-mcp/src/armavita_meta_ads_mcp/: __init__.py  __main__.py
technical/meta-ads/armavita-meta-ads-mcp/src/armavita_meta_ads_mcp/core/: __init__.py  account_tools.py  ad_tools.py  ads_archive_tools.py  adset_tools.py  audience_tools.py  auth_state.py  budget_schedule_tools.py  campaign_tools.py  delete_tools.py  duplication_tools.py  graph_client.py  graph_constants.py  insight_query_params.py  insight_tools.py  mcp_runtime.py  media_helpers.py  oauth_callback_server.py  pixel_tools.py  report_tools.py  research_tools.py  rule_tools.py  targeting_tools.py  video_tools.py
technical/meta-ads/armavita-meta-ads-mcp/src/armavita_meta_ads_mcp/runtime/: __init__.py  bootstrap.py
technical/meta-ads/armavita-meta-ads-mcp/tests/: test_ad_image_fallback.py  test_ad_previews_fallback.py  test_adset_payload_encoding.py  test_audience_tools.py  test_auth_cache_contract.py  test_creative_payloads.py  test_delete_tools.py  test_duplication_clone_tools.py  test_error_envelope.py  test_graph_client_sanitization.py  test_image_upload.py  test_insights_payload.py  test_instagram_actor_id.py  test_list_pagination_payloads.py  test_package_runtime.py  test_pixel_tools.py  test_report_query_params.py  test_rule_tools.py  test_runtime_tool_registration.py  test_tool_surface.py  test_video_tools.py
tmp/: custom-styles.css  hakkimizda-content.html  homepage-content.html  iletisim-content.html
(+700 files in other folders)
