[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "texture-generator"
version = "0.1.0"
description = "Generate 512×512 JPEG textures for curtain fabric variants via LAB color transfer"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]

[project.scripts]
texture-generator = "texture_generator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
